// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sankey bar chart rendering Should render the Sankey chart with string node data 1`] = `
<div>
  <div
    class="fui-sc__root"
    role="presentation"
  >
    <div
      class="fui-sc__chartWrapper"
    >
      <svg
        height="436"
        id="sankeyChart2"
        width="864"
      >
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement0.022344203377321126"
          >
            <rect
              aria-label="node 192.168.42.72 with weight 80"
              data-is-focusable="true"
              fill="#757575"
              height="237.53846153846155"
              id="nodeBar0.22318214297888717"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              width="124"
              x="48"
              y="36"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar0.22318214297888717-name"
                  text-anchor="start"
                  x="48"
                  y="36"
                >
                  192.168.42.72
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="48"
                y="36"
              >
                80
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement0.020736037862379986"
          >
            <rect
              aria-label="node 172.152.48.13 with weight 50"
              data-is-focusable="true"
              fill="#8764B8"
              height="148.46153846153845"
              id="nodeBar0.495319874184988"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              width="124"
              x="48"
              y="281.53846153846155"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar0.495319874184988-name"
                  text-anchor="start"
                  x="48"
                  y="281.53846153846155"
                >
                  172.152.48.13
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="48"
                y="281.53846153846155"
              >
                50
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__links"
          stroke-opacity="1"
        >
          <g>
            <defs>
              <lineargradient
                id="gradient-link1-0"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              >
                <stop
                  offset="0"
                  stop-color="#757575"
                />
                <stop
                  offset="100%"
                  stop-color="#757575"
                />
              </lineargradient>
            </defs>
            <path
              aria-label="link from 192.168.42.72 to 124.360.55.1 with weight 80"
              d="M172,36C455.5,36,455.5,36,739,36L739,273.538C455.5,273.538,455.5,273.538,172,273.538Z"
              data-is-focusable="true"
              fill-opacity="1"
              id="link0.4061780138772271"
              role="img"
              stroke="#757575"
              stroke-opacity="1"
              stroke-width="2"
            />
          </g>
        </g>
        <g
          class="fui-sc__links"
          stroke-opacity="1"
        >
          <g>
            <defs>
              <lineargradient
                id="gradient-link1-1"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              >
                <stop
                  offset="0"
                  stop-color="#8764B8"
                />
                <stop
                  offset="100%"
                  stop-color="#8764B8"
                />
              </lineargradient>
            </defs>
            <path
              aria-label="link from 172.152.48.13 to 192.564.10.2 with weight 50"
              d="M172,281.538C455.5,281.538,455.5,281.538,739,281.538L739,430C455.5,430,455.5,430,172,430Z"
              data-is-focusable="true"
              fill-opacity="1"
              id="link0.4577640003944352"
              role="img"
              stroke="#757575"
              stroke-opacity="1"
              stroke-width="2"
            />
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement0.6297805669362282"
          >
            <rect
              aria-label="node 124.360.55.1 with weight 80"
              data-is-focusable="true"
              fill="#757575"
              height="237.53846153846155"
              id="nodeBar0.9107218471591565"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              width="124"
              x="739"
              y="36"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar0.9107218471591565-name"
                  text-anchor="start"
                  x="739"
                  y="36"
                >
                  124.360.55.1
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="739"
                y="36"
              >
                80
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement0.8270025123933993"
          >
            <rect
              aria-label="node 192.564.10.2 with weight 50"
              data-is-focusable="true"
              fill="#8764B8"
              height="148.46153846153845"
              id="nodeBar0.5887371146436644"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              width="124"
              x="739"
              y="281.53846153846155"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar0.5887371146436644-name"
                  text-anchor="start"
                  x="739"
                  y="281.53846153846155"
                >
                  192.564.10.2
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="739"
                y="281.53846153846155"
              >
                50
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Sankey chart - Theme Should reflect theme change 1`] = `
<div>
  <div
    class="fui-FluentProvider fui-FluentProvider5"
    dir="ltr"
  >
    <div
      class="fui-sc__root"
      role="presentation"
    >
      <div
        class="fui-sc__chartWrapper"
      >
        <svg
          height="436"
          id="sankeyChart7"
          width="864"
        >
          <g
            class="fui-sc__nodes"
          >
            <g
              id="nodeGElement0.6454864010980905"
            >
              <rect
                aria-label="node 192.168.42.72 with weight 80"
                data-is-focusable="true"
                fill="#757575"
                height="237.53846153846155"
                id="nodeBar0.7004956759500087"
                opacity="1"
                role="img"
                stroke="#4B3867"
                stroke-width="2"
                width="124"
                x="48"
                y="36"
              />
              <g
                class="fui-sc__nodeTextContainer"
              >
                <g
                  class="nodeName"
                >
                  <text
                    aria-hidden="true"
                    dx="0.4em"
                    dy="1.2em"
                    fill="#FFFFFF"
                    font-size="10"
                    font-weight="regular"
                    id="nodeBar0.7004956759500087-name"
                    text-anchor="start"
                    x="48"
                    y="36"
                  >
                    192.168.42.72
                  </text>
                </g>
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="2em"
                  fill="#FFFFFF"
                  font-size="14"
                  font-weight="bold"
                  text-anchor="start"
                  x="48"
                  y="36"
                >
                  80
                </text>
              </g>
            </g>
          </g>
          <g
            class="fui-sc__nodes"
          >
            <g
              id="nodeGElement0.3487370103982397"
            >
              <rect
                aria-label="node 172.152.48.13 with weight 50"
                data-is-focusable="true"
                fill="#8764B8"
                height="148.46153846153845"
                id="nodeBar0.9343292682261748"
                opacity="1"
                role="img"
                stroke="#4B3867"
                stroke-width="2"
                width="124"
                x="48"
                y="281.53846153846155"
              />
              <g
                class="fui-sc__nodeTextContainer"
              >
                <g
                  class="nodeName"
                >
                  <text
                    aria-hidden="true"
                    dx="0.4em"
                    dy="1.2em"
                    fill="#FFFFFF"
                    font-size="10"
                    font-weight="regular"
                    id="nodeBar0.9343292682261748-name"
                    text-anchor="start"
                    x="48"
                    y="281.53846153846155"
                  >
                    172.152.48.13
                  </text>
                </g>
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="2em"
                  fill="#FFFFFF"
                  font-size="14"
                  font-weight="bold"
                  text-anchor="start"
                  x="48"
                  y="281.53846153846155"
                >
                  50
                </text>
              </g>
            </g>
          </g>
          <g
            class="fui-sc__links"
            stroke-opacity="1"
          >
            <g>
              <defs>
                <lineargradient
                  id="gradient-link6-0"
                  x1="0%"
                  x2="100%"
                  y1="0%"
                  y2="0%"
                >
                  <stop
                    offset="0"
                    stop-color="#757575"
                  />
                  <stop
                    offset="100%"
                    stop-color="#757575"
                  />
                </lineargradient>
              </defs>
              <path
                aria-label="link from 192.168.42.72 to 124.360.55.1 with weight 80"
                d="M172,36C455.5,36,455.5,36,739,36L739,273.538C455.5,273.538,455.5,273.538,172,273.538Z"
                data-is-focusable="true"
                fill-opacity="1"
                id="link0.9114477405892503"
                role="img"
                stroke="#757575"
                stroke-opacity="1"
                stroke-width="2"
              />
            </g>
          </g>
          <g
            class="fui-sc__links"
            stroke-opacity="1"
          >
            <g>
              <defs>
                <lineargradient
                  id="gradient-link6-1"
                  x1="0%"
                  x2="100%"
                  y1="0%"
                  y2="0%"
                >
                  <stop
                    offset="0"
                    stop-color="#8764B8"
                  />
                  <stop
                    offset="100%"
                    stop-color="#8764B8"
                  />
                </lineargradient>
              </defs>
              <path
                aria-label="link from 172.152.48.13 to 192.564.10.2 with weight 50"
                d="M172,281.538C455.5,281.538,455.5,281.538,739,281.538L739,430C455.5,430,455.5,430,172,430Z"
                data-is-focusable="true"
                fill-opacity="1"
                id="link0.5029832760241448"
                role="img"
                stroke="#757575"
                stroke-opacity="1"
                stroke-width="2"
              />
            </g>
          </g>
          <g
            class="fui-sc__nodes"
          >
            <g
              id="nodeGElement0.23346512665407104"
            >
              <rect
                aria-label="node 124.360.55.1 with weight 80"
                data-is-focusable="true"
                fill="#757575"
                height="237.53846153846155"
                id="nodeBar0.0600059894681062"
                opacity="1"
                role="img"
                stroke="#4B3867"
                stroke-width="2"
                width="124"
                x="739"
                y="36"
              />
              <g
                class="fui-sc__nodeTextContainer"
              >
                <g
                  class="nodeName"
                >
                  <text
                    aria-hidden="true"
                    dx="0.4em"
                    dy="1.2em"
                    fill="#FFFFFF"
                    font-size="10"
                    font-weight="regular"
                    id="nodeBar0.0600059894681062-name"
                    text-anchor="start"
                    x="739"
                    y="36"
                  >
                    124.360.55.1
                  </text>
                </g>
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="2em"
                  fill="#FFFFFF"
                  font-size="14"
                  font-weight="bold"
                  text-anchor="start"
                  x="739"
                  y="36"
                >
                  80
                </text>
              </g>
            </g>
          </g>
          <g
            class="fui-sc__nodes"
          >
            <g
              id="nodeGElement0.8825311793417965"
            >
              <rect
                aria-label="node 192.564.10.2 with weight 50"
                data-is-focusable="true"
                fill="#8764B8"
                height="148.46153846153845"
                id="nodeBar0.7747367559021259"
                opacity="1"
                role="img"
                stroke="#4B3867"
                stroke-width="2"
                width="124"
                x="739"
                y="281.53846153846155"
              />
              <g
                class="fui-sc__nodeTextContainer"
              >
                <g
                  class="nodeName"
                >
                  <text
                    aria-hidden="true"
                    dx="0.4em"
                    dy="1.2em"
                    fill="#FFFFFF"
                    font-size="10"
                    font-weight="regular"
                    id="nodeBar0.7747367559021259-name"
                    text-anchor="start"
                    x="739"
                    y="281.53846153846155"
                  >
                    192.564.10.2
                  </text>
                </g>
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="2em"
                  fill="#FFFFFF"
                  font-size="14"
                  font-weight="bold"
                  text-anchor="start"
                  x="739"
                  y="281.53846153846155"
                >
                  50
                </text>
              </g>
            </g>
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sankey chart rendering Should re-render the Sankey chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_SankeyChart_empty30"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Sankey chart rendering Should re-render the Sankey chart with data 2`] = `
<div>
  <div
    class="fui-sc__root"
    role="presentation"
    style=""
  >
    <div
      class="fui-sc__chartWrapper"
    >
      <svg
        height="436"
        id="sankeyChart29"
        width="864"
      >
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement0.8953595241092871"
          >
            <rect
              aria-label="node 192.168.42.72 with weight 80"
              data-is-focusable="true"
              fill="#757575"
              height="237.53846153846155"
              id="nodeBar0.3484722536207905"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              width="124"
              x="48"
              y="36"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar0.3484722536207905-name"
                  text-anchor="start"
                  x="48"
                  y="36"
                >
                  192.168.42.72
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="48"
                y="36"
              >
                80
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement0.2907338602669427"
          >
            <rect
              aria-label="node 172.152.48.13 with weight 50"
              data-is-focusable="true"
              fill="#8764B8"
              height="148.46153846153845"
              id="nodeBar0.8029183678143192"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              width="124"
              x="48"
              y="281.53846153846155"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar0.8029183678143192-name"
                  text-anchor="start"
                  x="48"
                  y="281.53846153846155"
                >
                  172.152.48.13
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="48"
                y="281.53846153846155"
              >
                50
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__links"
          stroke-opacity="1"
        >
          <g>
            <defs>
              <lineargradient
                id="gradient-link28-0"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              >
                <stop
                  offset="0"
                  stop-color="#757575"
                />
                <stop
                  offset="100%"
                  stop-color="#757575"
                />
              </lineargradient>
            </defs>
            <path
              aria-label="link from 192.168.42.72 to 124.360.55.1 with weight 80"
              d="M172,36C455.5,36,455.5,36,739,36L739,273.538C455.5,273.538,455.5,273.538,172,273.538Z"
              data-is-focusable="true"
              fill-opacity="1"
              id="link0.3919144598880344"
              role="img"
              stroke="#757575"
              stroke-opacity="1"
              stroke-width="2"
            />
          </g>
        </g>
        <g
          class="fui-sc__links"
          stroke-opacity="1"
        >
          <g>
            <defs>
              <lineargradient
                id="gradient-link28-1"
                x1="0%"
                x2="100%"
                y1="0%"
                y2="0%"
              >
                <stop
                  offset="0"
                  stop-color="#8764B8"
                />
                <stop
                  offset="100%"
                  stop-color="#8764B8"
                />
              </lineargradient>
            </defs>
            <path
              aria-label="link from 172.152.48.13 to 192.564.10.2 with weight 50"
              d="M172,281.538C455.5,281.538,455.5,281.538,739,281.538L739,430C455.5,430,455.5,430,172,430Z"
              data-is-focusable="true"
              fill-opacity="1"
              id="link0.4236116649698445"
              role="img"
              stroke="#757575"
              stroke-opacity="1"
              stroke-width="2"
            />
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement0.9310564692512608"
          >
            <rect
              aria-label="node 124.360.55.1 with weight 80"
              data-is-focusable="true"
              fill="#757575"
              height="237.53846153846155"
              id="nodeBar0.10597212461511396"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              width="124"
              x="739"
              y="36"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar0.10597212461511396-name"
                  text-anchor="start"
                  x="739"
                  y="36"
                >
                  124.360.55.1
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="739"
                y="36"
              >
                80
              </text>
            </g>
          </g>
        </g>
        <g
          class="fui-sc__nodes"
        >
          <g
            id="nodeGElement0.23331526482687615"
          >
            <rect
              aria-label="node 192.564.10.2 with weight 50"
              data-is-focusable="true"
              fill="#8764B8"
              height="148.46153846153845"
              id="nodeBar0.6012023000827476"
              opacity="1"
              role="img"
              stroke="#4B3867"
              stroke-width="2"
              width="124"
              x="739"
              y="281.53846153846155"
            />
            <g
              class="fui-sc__nodeTextContainer"
            >
              <g
                class="nodeName"
              >
                <text
                  aria-hidden="true"
                  dx="0.4em"
                  dy="1.2em"
                  fill="#FFFFFF"
                  font-size="10"
                  font-weight="regular"
                  id="nodeBar0.6012023000827476-name"
                  text-anchor="start"
                  x="739"
                  y="281.53846153846155"
                >
                  192.564.10.2
                </text>
              </g>
              <text
                aria-hidden="true"
                dx="0.4em"
                dy="2em"
                fill="#FFFFFF"
                font-size="14"
                font-weight="bold"
                text-anchor="start"
                x="739"
                y="281.53846153846155"
              >
                50
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
